name:			witness
version:		0.1
license:		BSD3
license-file:	LICENSE
author:			Ashley Yakeley <ashley@semantic.org>
maintainer:		Ashley Yakeley <ashley@semantic.org>
build-depends:	base>=2.0, mtl>=1.1
category:		Data
synopsis:		values that witness types
description:
	A witness is a value that "witnesses" some sort of constraint on some list of type variables.

	This library provides support for simple witnesses, that constrain a type variable to a single type, and equality witnesses, that constrain two type variables to be the same type. It also provides classes for representatives, which are values that represent types.
extensions:		RankNTypes MultiParamTypeClasses FlexibleInstances FlexibleContexts GADTs
build-type:		Simple
exposed-modules:
	Control.Category
	Data.Witness
	Data.Witness.WitnessDict
other-modules:
	Data.Witness.Any
	Data.Witness.Representative
	Data.Witness.Type
	Data.Witness.Witness
	Data.Witness.EqualType
	Data.Witness.List
