name: witness
version: 0.3
cabal-version: >=1.8
build-type: Simple
author: Ashley Yakeley <ashley@semantic.org>
license: BSD3
license-file: LICENSE
maintainer: Ashley Yakeley <ashley@semantic.org>
synopsis: values that witness types
description:
  A witness is a value that /witnesses/ some sort of constraint on some list of type variables.
  This library provides support for simple witnesses, that constrain a type variable to a single type, and equality witnesses, that constrain two type variables to be the same type.
  It also provides classes for representatives, which are values that represent types.
  See the paper /Witnesses and Open Witnesses/ (<http://semantic.org/stuff/Open-Witnesses.pdf>).
category: Data

library
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        transformers >=0.3,
        categories == 1.0.*,
        constraints >= 0.3
    exposed-modules:
        Data.Witness.ListElement
        Data.Witness
        Data.Witness.SimpleWitness
        Data.Witness.Type
        Data.Witness.List
        Data.Witness.WitnessDict
        Data.Witness.WitnessFDict
        Data.Witness.Any
        Data.Witness.Nat
        Data.Witness.Representative
        Data.Witness.EqualType
    extensions:
        MultiParamTypeClasses
        RankNTypes
        FlexibleContexts
        TypeOperators
        FlexibleInstances
        EmptyDataDecls
        KindSignatures
        TypeFamilies
        GADTs
        PolyKinds
        DataKinds
        ScopedTypeVariables
        PatternGuards
    ghc-options: -Wall

